vpc1.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: AWS Network Environment with Multiple VPCs, Subnets, IGW, NAT Gateways, VPC Peering, and Transit Gateway.

Resources:
  # VPC1
  VPC1:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: VPC1

  VPC1InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: VPC1-IGW

  VPC1AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC1
      InternetGatewayId: !Ref VPC1InternetGateway

  VPC1PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC1
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: VPC1-PublicSubnet

  VPC1PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC1
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: VPC1-PrivateSubnet

  VPC1NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId: !Ref VPC1PublicSubnet
      AllocationId: !GetAtt VPC1EIP.AllocationId

  VPC1EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  VPC1PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC1
      Tags:
        - Key: Name
          Value: VPC1-PublicRouteTable

  VPC1PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC1
      Tags:
        - Key: Name
          Value: VPC1-PrivateRouteTable

  VPC1PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref VPC1PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref VPC1InternetGateway

  VPC1PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref VPC1PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref VPC1NatGateway

  VPC1PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VPC1PublicSubnet
      RouteTableId: !Ref VPC1PublicRouteTable

  VPC1PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VPC1PrivateSubnet
      RouteTableId: !Ref VPC1PrivateRouteTable

  # Additional Availability Zone and Subnet
  VPC1AZ2:
    Type: AWS::EC2::AvailabilityZone
    Properties:
      ZoneName: !Sub "us-east-1b"

  VPC1Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC1
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Ref VPC1AZ2
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: VPC1-Subnet2

  VPC1Subnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref VPC1Subnet2
      RouteTableId: !Ref VPC1PublicRouteTable
